Fixed over spilling modal content on wide screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -285,7 +285,7 @@ header img {
     }
     
     .modal-content {
-        margin: 10% auto;
+        margin: 0 auto;
         border-radius: 5px;
         width: 60%;
         text-align: center;
